--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.1.11",
+        "@tanstack/react-query": "^5.59.20",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
@@ -54,7 +55,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.62.0",
         "react-hot-toast": "^2.6.0",
-    "@tanstack/react-query": "^5.59.20",
+        "recharts": "^3.1.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
